Changes in @NEW@:
  o Build Changes:
    * cvc will no longer fail if the EDITOR variable points to an invalid
      editor. (CNY-688)
    * Redirects now build erase redirects for package components which existed
      in the past but have disappeared on head (CNY-453)

  o Bug Fixes:
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * Builds that resulted in changesets containg the same file
      in different locations would fail to commit if the files differed
      only by mtime. (CNY-1114)
    * The mirror script now correctly handles the cases where
      the PathIdConflict erros are raised by certain source repositories
      during mirroring (CNY-426)

  o Internal changes:
    * Conary now supports being built against an internal copy of the
      sqlite3 library for cases when the system sqlite3 is not the
      optimal version for Conary.
    * The repository schema's string types are no longer restricted to
      arbitrary sizes for backends that support indexing larger strings
      than MySQL's InnoDB storage engine. (CNY-1054)

Changes in 1.0.40:
  o Build Changes:
    * All files in "binary directories" now provide their path as a
      file: dependency. This allows more flexibility for files that
      have requirements such as "file: /usr/bin/cp". (CNY-930)
    * A addRemoveRedirect() method has been added to the
      RedirectRecipe class to allow redirecting packages to nothing
      (which causes them to be erased on update). The client code has
      been updated to remove package components properly for this
      case.  (CNY-764)

  o Bug Fixes:
    * Config files, though added to the :config component by default
      (CNY-172), can now be appropriately overridden by
      ComponentSpec. (CNY-1107)
    * ELF files that have no DT_NEEDED or DT_SONAME entries no longer